--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Products#index</h1>
-<p>Find me in app/views/products/index.html.erb</p>
+<section class="section">
+  <div class="columns is-multiline">
+    <%= render partial: 'products/product', collection: @products %>
+  </div>
