--- a/app/views/producttypes/show.html.erb
+++ b/app/views/producttypes/show.html.erb
@@ -1,2 +1,12 @@
-<h1>Producttypes#show</h1>
-<p>Find me in app/views/producttypes/show.html.erb</p>
+<section class="content hero is-info pl-6 mt-4">
+  <div class="hero-body">
+    <h1 class="title"><%= @producttype.name %></h1>
+  </div>
+</section>
+<div class="container">
+<div class="columns is-multiline">
+  <%= render partial: 'products/product', collection: @producttype.products %>
+</div>
+</div>
+</div>
+<div class="section"></div>
