--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,9 +1,1 @@
-<%= render partial: 'submenu' %>
-<section class="section">
-  <div class="columns is-multiline">
-    <%= render partial: 'products/product', collection: @products %>
-  </div>
-</section>
-  <div>
-  <%= paginate @products %>
-  </div>
+<%= render partial: 'productview' %>
