--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,7 +17,7 @@
               <div class="card-content block">
                 <h1 class="title"><%= @product.name %></h1>
                 <p>Category: <%=@product.producttype.name%></p>
-                <p>Price: $<%=(@product.price.to_d / 100)%></p>
+                <p>Price: $<%=@product.price%></p>
                 <p>Stock: <%=@product.stocklevel%></p>
             </div>
           </div>
