--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,16 +1,22 @@
 <div class="column is-one-third">
   <%= link_to product do %>
-  <div class="card box">
-    <% if product.image.present? %>
-    <div class="card-image">
-      <figure class="image is-2-5">
-        <%= image_tag product.image.variant(resize_to_limit:[250,250]) %>
-      </figure>
+    <div class="card box">
+      <% if product.image.present? %>
+        <div class="card-image">
+          <figure class="image is-2-5">
+            <%= image_tag product.image.variant(resize_to_limit:[250,250]) %>
+          </figure>
+        </div>
+      <%end%>
+      <div class="card-content has-text-centered mt-2">
+        <p class="title is-4"><%= product.name %></p>
+        <p>Price: <%= number_to_currency product.price / 100.0 %></p>
+      </div>
+      <!--Add to cart buttons for cards -->
+      <%= form_with url: cart_index_path, method: :post do %>
+        <%= hidden_field_tag(:id, product.id) %>
+        <%= button_tag 'Add to Cart' %>
+      <% end %>
     </div>
-    <%end%>
-    <div class="card-content has-text-centered mt-2">
-      <p class="title is-4"><%= product.name %></p>
-    </div>
-  </div>
   <%end%>
 </div>
