--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,27 +1,46 @@
 <section class="section">
   <div class="container">
-    <div class="card">
-      <div class="columns">
+    <div class="columns">
+      <!-- show images on cards -->
+      <% if @product.image.present? %>
         <div class="column is-two-fifths">
-          <div class="card-image p-5">
-            <figure class="image is-2by4">
-              <% if @product.image.present? %>
-              <%= image_tag(@product.image, alt: @product.name) %>
-              <%end%>
-            </figure>
+          <div class="card">
+            <div class="card-image p-5">
+              <figure class="image is-2by4">
+                <%= image_tag(@product.image, alt: @product.name) %>
+              </figure>
+            </div>
           </div>
         </div>
-        <div class="column p-5 is-vcentered">
-          <div class="column p-4 has-background-primary-light">
+      <%end%>
+      <!-- Show card details -->
+      <div class="column p-5 is-vcentered">
+        <div class="column p-4 has-background-primary-light">
+          <!-- card begins -->
+          <div class="card">
             <div class="card-content">
               <div class="card-content block">
                 <h1 class="title"><%= @product.name %></h1>
                 <p>Category: <%=@product.producttype.name%></p>
-                <p>Price: $<%=@product.price%></p>
+                <p>Price: <%= number_to_currency @product.price / 100.0 %></p>
                 <p>Stock: <%=@product.stocklevel%></p>
+              </div>
+              <!--Add to cart buttons for cards -->
+              <% if cart.include?(@product) %>
+                <%= button_to cart_path(@product), method: :delete do %>
+                  X Remove From Cart
+                <% end %>
+              <% else %>
+                <%= form_with url: cart_index_path, method: :post do %>
+                  <%= hidden_field_tag(:id, @product.id) %>
+                  <%= button_tag 'Add to Cart' %>
+                <% end %>
+              <% end %>
             </div>
           </div>
+          <!-- card ends -->
         </div>
       </div>
     </div>
-  </section>
+  </div>
+</section>
