--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,5 @@
 <div class="column is-one-third">
-  <%= link_to product do %>
+
     <div class="card box">
       <!-- Shows image if available -->
       <% if product.image.present? %>
@@ -11,8 +11,10 @@
       <%end%>
       <!-- product name and price -->
       <div class="card-content has-text-centered mt-2">
+        <%= link_to product do %>
         <p class="title is-4"><%= product.name %></p>
-        <p>Price: <%= number_to_currency product.price / 100.0 %></p>
+        <p>Price: <%= number_to_currency product.price %></p>
+          <%end%>
       </div>
       <!--Add to cart buttons for cards -->
       <% if cart.include?(product) %>
@@ -30,5 +32,5 @@
         <% end %>
       <% end %>
     </div>
-  <%end%>
+
 </div>
