--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,36 +1,36 @@
-<div class="column is-one-third">
-
-    <div class="card box">
-      <!-- Shows image if available -->
-      <% if product.image.present? %>
-        <div class="card-image">
-          <figure class="image is-2-5">
-            <%= image_tag product.image.variant(resize_to_limit:[250,250]) %>
-          </figure>
-        </div>
-      <%end%>
-      <!-- product name and price -->
-      <div class="card-content has-text-centered mt-2">
-        <%= link_to product do %>
-        <p class="title is-4"><%= product.name %></p>
-        <p>Price: <%= number_to_currency product.price %></p>
-          <%end%>
+<div class="column is-one-fifth">
+  <div class="card box">
+    <!-- Shows image if available -->
+    <% if product.image.present? %>
+      <div class="card-image">
+        <figure class="image is-2-5">
+          <%= image_tag product.image.variant(resize_to_limit:[250,250]) %>
+        </figure>
       </div>
+    <%end%>
+    <!-- product name and price -->
+    <div class="card-content has-text-centered mt-2">
+      <%= link_to product do %>
+        <p class="title is-5"><%= product.name %></p>
+        <p class="subtitle"><%= number_to_currency product.price / 100 %></p>
+      <%end%>
+    </div>
+    <footer class="card-footer">
       <!--Add to cart buttons for cards -->
       <% if cart.include?(product) %>
         <%= button_to cart_path(product),
         method: :delete,
-        class: "button is-primary" do %>
+        class: "card-footer-item" do %>
           X Remove From Cart
         <% end %>
       <% else %>
         <%= form_with url: cart_index_path,
         method: :post,
-        class: "button is-primary" do %>
+        class: "card-footer-item" do %>
           <%= hidden_field_tag(:id, product.id) %>
-          <%= button_tag 'Add to Cart', style: "background: none; border: none;" %>
+          <%= button_tag 'Add to Cart' %>
         <% end %>
       <% end %>
-    </div>
-
+    </footer>
+  </div>
 </div>
