Implemented the search bar with the dropdown

--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -1,45 +1,55 @@
-<header class="has-shadow">
-  <nav class="navbar is-spaced" role="navigation" aria-label="main navigation">
-    <div class="navbar-start">
-      <div class="navbar-item">
-        <%= link_to 'Home', root_path%>
-      </div>
-      <div class="navbar-item">
-        <%= link_to 'Categories', producttypes_path%>
-      </div>
-      <div class="navbar-item">
-        <%= link_to 'Wrestlers', wrestlers_path%>
-        <div class="navbar-item">
-          <%#= link_to 'About', pages_about_path%>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-start">
+    <div class="navbar-item">
+      <%= link_to 'Home', root_path%>
+    </div>
+    <div class="navbar-item">
+      <%= link_to 'Categories', producttypes_path%>
+    </div>
+    <div class="navbar-item">
+      <%= link_to 'Wrestlers', wrestlers_path%>
+    </div>
+    <div class="navbar-item">
+      About Page
+    </div>
+  </div>
+  <div class="navbar-end">
+    <div class="navbar-item">
+      <!-- search form -->
+      <%= form_tag(search_path, method: :get, class: 'field is-grouped') do %>
+        <div class="control is-expanded">
+          <%= text_field_tag :search, params[:search], class: 'input is-small', placeholder: 'Search by name' %>
         </div>
-      </div>
-      <div class="navbar-end">
-        <div class="navbar-item">
-          <div class="level">
-            <!-- search form -->
+        <div class="control is-narrow" style="width: 120px;">
+          <%= select_tag :set, options_for_select([['All Categories', '']] + Producttype.all.map { |pt| [pt.name, pt.id] }, params[:set]), class: 'select is-small' %>
+        </div>
+        <div class="control">
+          <%= submit_tag 'Search', name: nil, class: 'button is-info is-small' %>
+        </div>
+      <% end %>
+    </div>
+    <div class="navbar-item">
+      <details>
+        <summary>
+          <div class="is-title">
+            🛒
           </div>
-        </div>
-        <div class="navbar-item">
-          <details>
-            <summary>
-              Cart
-              <% if cart.present? %>
-                <sup><%= cart.size %></sup>
-              <% end %>
-            </summary>
-            <% if cart.present? %>
-              <ul>
-                <% cart.each do |product| %>
-                  <li>
-                    <%= product.name %> <%= link_to '❌', cart_path(product.id), method: :delete %>
-                  </li>
-                <% end %>
-              </ul>
-            <% else %>
-              <p>No items in your cart.</p>
+          <% if cart.present? %>
+            <sup><%= cart.size %></sup>
+          <% end %>
+        </summary>
+        <% if cart.present? %>
+          <ul>
+            <% cart.each do |product| %>
+              <li>
+                <%= product.name %> <%= link_to '❌', cart_path(product.id), method: :delete %>
+              </li>
             <% end %>
-          </details>
-        </div>
-      </div>
-    </nav>
-  </header>
+          </ul>
+        <% else %>
+          <p>No items in your cart.</p>
+        <% end %>
+      </details>
+    </div>
+  </div>
+</nav>
