--- a/app/views/products/_productview.html.erb
+++ b/app/views/products/_productview.html.erb
@@ -1,9 +1,14 @@
 <%= render partial: 'submenu' %>
+<%# Add if there is no search rsults, show now cards found message %>
 <section class="section">
   <div class="columns is-multiline">
-    <%= render partial: 'products/product', collection: @products %>
-  </div>
-</section>
-<div>
-  <%= paginate @products %>
-</div>
+    <% if @products.present? %>
+      <%= render partial: 'products/product', collection: @products %>
+    <% else %>
+      <div class="column is-full">
+        <div class="notification is-warning has-text-centered">
+          No cards found.
+        </div>
+      </div>
+    <% end %>
+  </section>
