Redirect to checkout works

--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -47,11 +47,11 @@
             <% end %>
           </ul>
           <div>
-          <%= form_with url: checkout_create_path, remote: true do %>
-          <%#= hidden_field_tag(:product_id, product.id) %>
-          <%= button_tag 'Buy Now 💳' %>
+            <%= form_with url: checkout_create_path, remote: true, allow_other_host: true, data: { turbo: false}  do %>
+              <%#= hidden_field_tag(:product_id, product.id) %>
+              <%= button_tag 'Buy Now 💳' %>
+            <%end%>
           </div>
-          <%end%>
         <% else %>
           <p>No items in your cart.</p>
         <% end %>
