Added an about and contact page.

--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -10,7 +10,7 @@
       <%= link_to 'Wrestlers', wrestlers_path%>
     </div>
     <div class="navbar-item">
-      About Page
+      <%= link_to 'About Page', abouts_path%>
     </div>
   </div>
   <div class="navbar-end">
