--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
     <%= javascript_importmap_tags %>
   </head>
   <body>
+    <% if flash[:notice] %>
+      <div class="message is-info"><%= flash.now[:notice] %></div>
+    <% end %>
     <%= render partial: 'common/menu'%>
     <%= render_breadcrumbs :separator => ' / '%>
     <main>
