--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -12,7 +12,7 @@
     <div class="card-content has-text-centered mt-2">
       <%= link_to product do %>
         <p class="title is-5"><%= product.name %></p>
-        <p class="subtitle"><%= number_to_currency product.price / 100%></p>
+        <p class="subtitle"><%= number_to_currency product.price%></p>
       <%end%>
     </div>
     <footer class="card-footer">
@@ -28,6 +28,8 @@
         method: :post,
         class: "card-footer-item" do %>
           <%= hidden_field_tag(:id, product.id) %>
+          <%= label_tag :qty, "Quantity:" %>
+          <%= number_field_tag :qty, type: 'number' %>
           <%= button_tag 'Add to Cart' %>
         <% end %>
       <% end %>
