Able to add customer to table

--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -8,4 +8,6 @@
   <%= form.collection_select :province_id, @provinces, :id, :abbr %>
   <%= form.label :postal_code, "Postal Code:"%>
   <%= form.text_field :postal_code %>
+
+  <%= form.button %>
 <%end%>
