--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -47,10 +47,7 @@
             <% end %>
           </ul>
           <div>
-            <%= form_with url: checkout_create_path, remote: true, allow_other_host: true, data: { turbo: false}  do %>
-              <%#= hidden_field_tag(:product_id, product.id) %>
-              <%= button_tag 'Buy Now 💳' %>
-            <%end%>
+            <%= button_to 'Checkout', new_customer_path, method: :get%>
           </div>
         <% else %>
           <p>No items in your cart.</p>
@@ -58,4 +55,9 @@
       </details>
     </div>
   </div>
+
+              <%#= form_with url: checkout_create_path, remote: true, allow_other_host: true, data: { turbo: false}  do %>
+              <%#= hidden_field_tag(:product_id, product.id) %>
+              <%#= button_tag 'Buy Now 💳' %>
+              <%#end%>
 </nav>
