--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -1,68 +1,46 @@
-<!-- top nav with search form and shopping cart -->
-<nav class="box columns p-4" role="navigation" aria-label="main navigation">
+<nav class="columns pt-4 px-6" role="navigation" aria-label="main navigation">
   <div class="column is-full">
-    <div class="columns">
+    <div class="columns is-vcentered is-gapless">
       <div class="column is-one-third">
-        <h3 class="title"><%= link_to '🌠Powerslam', root_path %></h3>
+        <h3 class="title is-3"><%= link_to '🌠Powerslam', root_path %></h3>
+        <%= render_breadcrumbs :separator => ' / '%>
       </div>
       <div class="column is-one-third">
-        <%= form_tag(search_path, method: :get, class: "") do %>
+        <%= form_tag(search_path, method: :get) do %>
           <div class="field is-grouped">
             <%= select_tag :set, options_for_select([['All Categories', '']] + Producttype.all.map {|pt| [pt.name, pt.id] }, params[:set]), :class => 'select has-text-centered' %>
             <%= text_field_tag :search, params[:search], placeholder: 'Search by name', :class => "input is-expanded" %>
             <%= submit_tag 'Search', name: nil, class: 'button' %>
-          <% end %>
+          </div>
+        <% end %>
+        <div class="columns is-multiline is-centered mt-1">
+          <div class="column is-narrow">
+            <a>Categories</a>
+          </div>
+          <%# for producttype in Producttype.all %>
+          <%#= link_to producttype.name, root_path %>
+          <%# end %>
+          <div class="column is-narrow">
+            <%= link_to 'Wrestlers', wrestlers_path%>
+          </div>
+          <div class="column is-narrow">
+            <%= link_to 'New Products', new_product_path%>
+          </div>
+          <div class="column is-narrow">
+            <%= link_to 'Recently Updated', updated_products_path%>
+          </div>
+          <div class="column is-narrow">
+            <%= link_to 'About Page', abouts_path%>
+          </div>
         </div>
       </div>
-      <div class="column has-background-primary">
-        <!-- change this to a button  -->
-        <summary>
-          <span class="icon">
-            <i class="fas fa-2x">🛒</i>
-          </span>
-        </span>
-        <% if cart.present? %>
-          <sup><%= cart.size %></sup>
+      <div class="column has-text-right">
+        <% if cart.size > 0%>
+          <%= button_to "🛒 Cart (#{cart.size})", new_customer_path, method: :get, class: 'button is-link' %>
+        <% else%>
+          <%= button_to "🛒 Cart", new_customer_path, method: :get, class: 'button is-link' %>
         <% end %>
-      </summary>
-      <% if cart.present? %>
-        <ul>
-          <% cart.each do |product| %>
-            <li>
-              <%= product.name %><%= link_to '❌', cart_path(product.id), method: :delete %>
-            </li>
-          <% end %>
-        </ul>
-        <div>
-          <%= button_to 'Checkout', new_customer_path, method: :get%>
-        </div>
-      <% else %>
-        <p>No items in your cart.</p>
-      <% end %>
-    </details>
-  </div>
-</nav>
-<!-- Bottom part of nav -->
-<nav id="bottom-nav" class="navbar" role="navigation" aria-label="dropdown navigation">
-  <div class="navbar-item has-dropdown">
-    <a class="navbar-link">Categories</a>
-    <div class="navbar-dropdown">
-      <% for producttype in Producttype.all %>
-        <p class="navbar-item"><%= link_to producttype.name, root_path %></p>
-      <% end %>
+      </div>
     </div>
   </div>
-  <div class="navbar-item">
-    <%= link_to 'Wrestlers', wrestlers_path%>
-  </div>
-  <div class="navbar-item">
-    <%= link_to 'New Products', new_product_path%>
-  </div>
-  <div class="navbar-item">
-    <%= link_to 'Updated', updated_products_path%>
-  </div>
-  <div class="navbar-item">
-    <%= link_to 'About Page', abouts_path%>
-  </div>
-</div>
 </nav>
