--- a/app/views/customers/new.html.erb
+++ b/app/views/customers/new.html.erb
@@ -1,13 +1,48 @@
-<h1>Shipping Address</h1>
-<%= form_with model: @customer do |form|%>
-  <%= form.label :name, "Full Name:"%>
-  <%= form.text_field :name %>
-  <%= form.label :address, "Address:"%>
-  <%= form.text_field :address %>
-  <%= form.label :province_id, "Province:"%>
-  <%= form.collection_select :province_id, @provinces, :id, :abbr %>
-  <%= form.label :postal_code, "Postal Code:"%>
-  <%= form.text_field :postal_code %>
-
-  <%= form.button %>
-<%end%>
+<div class="section">
+  <div class="container">
+    <h1>Shipping Address</h1>
+    <%= form_with model: @customer do |form|%>
+      <!-- name input -->
+      <div class="field">
+        <%= form.label :name, "Full Name:", class: "label"%>
+        <div class="control">
+          <%= form.text_field :name %>
+        </div>
+      </div>
+      <!-- name input -->
+      <div class="field">
+        <%= form.label :address, "Address:", class: "label"%>
+        <div class="control">
+          <%= form.text_field :address %>
+        </div>
+      </div>
+      <!-- province input -->
+      <div class="level">
+        <div class="level-left">
+          <div class="level-item">
+            <div class="field">
+              <%= form.label :province_id, "Province:", class: "label" %>
+              <div class="control">
+                <span class="select">
+                  <%= form.collection_select :province_id, @provinces, :id, :abbr %>
+                </span>
+              </div>
+            </div>
+          </div>
+          <!-- postal input -->
+          <div class="level-item">
+            <div class="field">
+              <%= form.label :postal_code, "Postal Code:", class: "label"%>
+              <div class="control">
+                <%= form.text_field :postal_code, class: "input" %>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="control">
+        <%= form.button "Continue as guest", class: "button" %>
+      </div>
+    <%end%>
+  </div>
+</div>
