--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <title>Ecomm</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%#= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= javascript_importmap_tags %>
@@ -14,7 +14,7 @@
       <div class="message is-info"><%= flash.now[:notice] %></div>
     <% end %>
     <%= render partial: 'common/menu'%>
-    <main>
+    <main class="has-background-white-ter">
       <%= yield %>
     </main>
   </body>
