--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,19 +1,27 @@
-<div class="column is-one-fifth">
-  <div class="card box">
+<div class="column is-one-quarter">
+  <div class="card is-flex-direction-column" style="height: 100%">
     <!-- Shows image if available -->
-    <% if product.image.present? %>
-      <div class="card-image">
-        <figure class="image is-2-5">
-          <%= image_tag product.image.variant(resize_to_limit:[250,250]) %>
-        </figure>
+    <%= link_to product do %>
+      <% if product.image.present? %>
+        <div class="card-image">
+          <figure class="image is-2-5">
+            <%= image_tag product.image.variant(resize_to_limit:[250,250]) %>
+          </figure>
+        </div>
+      <%end%>
+      <!-- product name and price -->
+      <div class="card-content has-text-centered">
+        <div class="content is-medium">
+          <% if product.name.length > 50 %>
+            <p class="has-text-dark"><%= product.name[0..50] %>...</p>
+          <% else %>
+            <p class="has-text-dark"><%= product.name %></p>
+          <% end %>
+          <p class="subtitle has-text-dark mt-2"><%= number_to_currency product.price%></p>
+        </div>
       </div>
     <%end%>
-    <!-- product name and price -->
-    <div class="card-content has-text-centered">
-      <p class=""><%= link_to product.name, product %></p>
-      <p class="subtitle mt-2"><%= link_to number_to_currency(product.price), product%></p>
-    </div>
-    <footer class="card-footer is-justify-content-center">
+    <footer class="card-footer is-justify-content-center py-3">
       <!--Add to cart buttons for cards -->
       <% if cart.include?(product) %>
         <%= link_to cart_path(product), method: :delete, class: "card-footer-item" do %>
