--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -1,46 +1,45 @@
-<nav class="columns pt-4 px-6" role="navigation" aria-label="main navigation">
-  <div class="column is-full">
-    <div class="columns is-vcentered is-gapless">
-      <div class="column is-one-third">
-        <h3 class="title is-3"><%= link_to '🌠Powerslam', root_path %></h3>
-        <%= render_breadcrumbs :separator => ' / '%>
+<nav class="columns pt-4 px-6 is-vcentered" role="navigation" aria-label="main navigation">
+  <div class="column is-one-third">
+    <h3 class="title is-3"><%= link_to '🌠Powerslam', root_path %></h3>
+    <%= render_breadcrumbs :separator => ' / '%>
+  </div>
+  <div class="column is-one-third">
+    <%= form_tag(search_path, method: :get, class: "field has-addons") do %>
+      <div class="control">
+        <span class="select has-text-centered">
+          <%= select_tag :set, options_for_select([['All Categories', '']] + Producttype.all.map {|pt| [pt.name, pt.id] }, params[:set]) %>
+        </span>
       </div>
-      <div class="column is-one-third">
-        <%= form_tag(search_path, method: :get) do %>
-          <div class="field is-grouped">
-            <%= select_tag :set, options_for_select([['All Categories', '']] + Producttype.all.map {|pt| [pt.name, pt.id] }, params[:set]), :class => 'select has-text-centered' %>
-            <%= text_field_tag :search, params[:search], placeholder: 'Search by name', :class => "input is-expanded" %>
-            <%= submit_tag 'Search', name: nil, class: 'button' %>
-          </div>
-        <% end %>
-        <div class="columns is-multiline is-centered mt-1">
-          <div class="column is-narrow">
-            <a>Categories</a>
-          </div>
-          <%# for producttype in Producttype.all %>
-          <%#= link_to producttype.name, root_path %>
-          <%# end %>
-          <div class="column is-narrow">
-            <%= link_to 'Wrestlers', wrestlers_path%>
-          </div>
-          <div class="column is-narrow">
-            <%= link_to 'New Products', new_product_path%>
-          </div>
-          <div class="column is-narrow">
-            <%= link_to 'Recently Updated', updated_products_path%>
-          </div>
-          <div class="column is-narrow">
-            <%= link_to 'About Page', abouts_path%>
-          </div>
-        </div>
+      <div class="control is-expanded">
+        <%= text_field_tag :search, params[:search], placeholder: 'Search by name', class: "input" %>
       </div>
-      <div class="column has-text-right">
-        <% if cart.size > 0%>
-          <%= button_to "🛒 Cart (#{cart.size})", new_customer_path, method: :get, class: 'button is-link' %>
-        <% else%>
-          <%= button_to "🛒 Cart", new_customer_path, method: :get, class: 'button is-link' %>
-        <% end %>
+      <div class="control">
+        <%= submit_tag 'Search', name: nil, class: 'button' %>
+      </div>
+    <% end %>
+    <div class="columns is-multiline is-centered mt-1">
+      <div class="column is-narrow">
+        <a>Categories</a>
+      </div>
+      <div class="column is-narrow">
+        <%= link_to 'Wrestlers', wrestlers_path%>
+      </div>
+      <div class="column is-narrow">
+        <%= link_to 'New Products', new_product_path%>
+      </div>
+      <div class="column is-narrow">
+        <%= link_to 'Recently Updated', updated_products_path%>
+      </div>
+      <div class="column is-narrow">
+        <%= link_to 'About Page', abouts_path%>
       </div>
     </div>
+  </div>
+  <div class="column has-text-right">
+    <% if cart.size > 0%>
+      <%= button_to "🛒 Cart (#{cart.size})", new_customer_path, method: :get, class: 'button is-link' %>
+    <% else%>
+      <%= button_to "🛒 Cart", new_customer_path, method: :get, class: 'button is-link' %>
+    <% end %>
   </div>
 </nav>
