fixed the nav link for categories:

--- a/app/views/common/_menu.html.erb
+++ b/app/views/common/_menu.html.erb
@@ -19,7 +19,7 @@
     <% end %>
     <div class="columns is-multiline is-centered mt-1">
       <div class="column is-narrow">
-        <a>Categories</a>
+        <%= link_to 'Categories', producttypes_path%>
       </div>
       <div class="column is-narrow">
         <%= link_to 'Wrestlers', wrestlers_path%>
