--- a/app/views/products/_productview.html.erb
+++ b/app/views/products/_productview.html.erb
@@ -6,7 +6,7 @@
       <% else %>
         <div class="column is-full">
           <div class="notification is-warning has-text-centered">
-            No cards found.
+            No products found.
           </div>
         </div>
       <% end %>
