--- a/app/views/cart/_items.html.erb
+++ b/app/views/cart/_items.html.erb
@@ -2,7 +2,7 @@
   <ul>
     <% cart.each do |product| %>
       <li>
-        <%= product.name %><%= link_to '❌', cart_path(product.id), method: :delete %>
+        <%= product.name %><%= button_to '✖️', cart_path(product), method: :delete %>
       </li>
     <% end %>
   </ul>
