--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,24 +1,47 @@
-<h1>Orders#new</h1>
-
-<% if cart.present? %>
-  <ul>
-    <% cart.each do |product| %>
-      <li>
-        <%= product.name %>
-      </li>
-<% end %>
-<% end %>
-<li>
-  Taxes: <%= number_to_currency @taxes%>
-</li>
-  </ul>
-
-<p><%= @customer.name %></p>
-<p><%= @customer.address %></p>
-<p><%= @customer.postal_code %></p>
-<p><%= @customer.province.name %></p>
-
-<%= form_with url: checkout_create_path, remote: true, allow_other_host: true, data: { turbo: false}  do %>
-<%#= hidden_field_tag(:product_id, product.id) %>
-<%= button_tag 'Buy Now 💳' %>
-<%end%>
+<div class="section">
+  <div class="container">
+    <div class="box">
+      <div class="content">
+        <div class="columns is-multiline">
+          <div class="column is-two-thirds">
+            <h1 class="title">Orders</h1>
+            <h2 class="subtitle has-background-info-light py-4">Total Due: <%= number_to_currency (@taxes + @subtotal) %></h2>
+            <table class="table is-striped">
+              <% if cart.present? %>
+                <% cart.each do |product| %>
+                  <tr>
+                    <td><%= product.name %></td>
+                    <td><%= number_to_currency product.price %></td>
+                  </tr>
+                <% end %>
+              <% end %>
+              <tr>
+                <td>----- SUBTOTAL -----</td>
+                <td><%= number_to_currency @subtotal%></td>
+              </tr>
+              <tr>
+                <td>----- TAXES -----</td>
+                <td><%= number_to_currency @taxes%></td>
+              </tr>
+              <tr class="has-text-weight-bold">
+                <td>----- TOTAL DUE TODAY -----</td>
+                <td><%= number_to_currency (@taxes + @subtotal) %></td>
+              </tr>
+            </table>
+            <%= form_with url: checkout_create_path, remote: true, allow_other_host: true, data: { turbo: false}  do %>
+              <%#= hidden_field_tag(:product_id, product.id) %>
+              <%= button_tag 'Buy Now 💳', class: "button" %>
+            <% end %>
+          </div>
+          <div class="column is-one-third">
+            <h2 class="title">Customer Details</h2>
+            <p><%= @customer.name %></p>
+            <p><%= @customer.address %></p>
+            <p><%= @customer.postal_code %></p>
+            <p><%= @customer.province.name %></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
